Css fixes on safari

--- a/src/scss/includes/search_form.scss
+++ b/src/scss/includes/search_form.scss
@@ -227,6 +227,7 @@ input[type="search"] {
 
     .search_form__input {
       visibility: hidden;
+      padding: 0;
     }
 
     .search_form__action {
